--- a/index.html
+++ b/index.html
@@ -3,12 +3,33 @@
   <head>
     <meta charset="utf-8">
     <title>What a Vue</title>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.1.10/vue.js"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
   <body>
     <div id="app">
-      {{msg}}
+      <h2>Categories</h2>
+      <div class="btn-group" role="group">
+        <button v-for="category in categories"
+                v-on:click="toggleCategory(category)"
+                v-bind:class="{ 'btn-info': category.selected }"
+                class="btn"
+                type="button">
+          {{ category.name | capitalize }} <span class="badge">{{ countInCategory(category.name) }}</span>
+        </button>
+      </div>
+      <h2>Selected</h2>
+      <ul>
+        <li v-for="category in selectedCategories">{{ category.name | capitalize }}</li>
+      </ul>
+      <h2>Ingredients</h2>
+      <ul>
+        <li v-for="ingredient in relevantIngredients">
+          {{ingredient.name}} ({{ingredient.category}})
+        </li>
+      </ul>
     </div>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.1.10/vue.js"></script>
     <script type="text/javascript" src="scripts/app.js"></script>
   </body>
 </html>
