--- a/index.html
+++ b/index.html
@@ -13,35 +13,24 @@
         <p>Enjoy a pizza, with Vue.js</p>
       </div>
     </div>
-    <div class="container">
+    <div class="container" id="components">
       <div class="row">
         <div class="col-md-8">
-          <div id="app">
-            <h2>Categories</h2>
-            <div class="btn-group" role="group">
-              <button v-for="category in categories"
-                      v-on:click="toggleCategory(category)"
-                      v-bind:class="{ 'btn-info': category.selected }"
-                      class="btn"
-                      type="button">
-                {{ category.name | capitalize }} <span class="badge">{{ countInCategory(category.name) }}</span>
-              </button>
-            </div>
-            <h2>Ingredients</h2>
-            <ul>
-              <li v-for="ingredient in relevantIngredients">
-                {{ingredient.name}} ({{ingredient.category}})
-              </li>
-            </ul>
-          </div>
+          <category-selection v-bind:categories="categories" v-bind:ingredients="ingredients"></category-selection>
+          <ingredient-selection v-bind:categories="categories" v-bind:ingredients="ingredients"></ingredient-selection>
         </div>
         <div class="col-md-4">
           <h2>Your Pizza</h2>
+          <h3>Ingredients</h3>
+          <selected-pizza v-bind:ingredients="ingredients"></selected-pizza>
+          <h3>Options</h3>
+          <selected-options v-bind:options="meta"></selected-options>
         </div>
       </div>
     </div>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.1.10/vue.js"></script>
+    <script type="text/javascript" src="scripts/components.js"></script>
     <script type="text/javascript" src="scripts/app.js"></script>
   </body>
 </html>
