--- a/index.html
+++ b/index.html
@@ -13,23 +13,41 @@
         <p>Enjoy a pizza, with Vue.js</p>
       </div>
     </div>
-    <div class="container" id="components">
+    <div class="container section-content" id="components">
       <div class="row">
         <div class="col-md-8">
-          <category-selection v-bind:categories="categories" v-bind:ingredients="ingredients"></category-selection>
-          <ingredient-selection v-bind:categories="categories" v-bind:ingredients="ingredients"></ingredient-selection>
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h3 class="panel-title">Build Your Pizza</h3>
+            </div>
+            <div class="panel-body">
+              <form class="content-row clearfix">
+                <div class="col-md-7">
+                  <category-selection v-bind:categories="categories"
+                                      v-bind:ingredients="ingredients"></category-selection>
+                </div>
+                <div class="col-md-5">
+                  <ingredient-search-filter v-bind:query="searchQuery"
+                                            v-on:search-query-change="queryChange"
+                                            v-on:search-query-clear="queryClear"></ingredient-search-filter>
+                </div>
+              </form>
+              <ingredient-selection v-bind:categories="categories"
+                                    v-bind:ingredients="ingredients"
+                                    v-bind:query="searchQuery"></ingredient-selection>
+            </div>
+          </div>
         </div>
         <div class="col-md-4">
-          <h2>Your Pizza</h2>
-          <h3>Ingredients</h3>
+          <h2>Your Order: <total-price v-bind:ingredients="ingredients"></total-price></h2>
           <selected-pizza v-bind:ingredients="ingredients"></selected-pizza>
-          <h3>Options</h3>
           <selected-options v-bind:options="meta"></selected-options>
         </div>
       </div>
     </div>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.1.10/vue.js"></script>
+    <script type="text/javascript" src="scripts/filters.js"></script>
     <script type="text/javascript" src="scripts/components.js"></script>
     <script type="text/javascript" src="scripts/app.js"></script>
   </body>
