--- a/index.html
+++ b/index.html
@@ -39,14 +39,20 @@
           </div>
         </div>
         <div class="col-md-4">
-          <h2>Current: <current-price v-bind:ingredients="ingredients"></current-price></h2>
+          <h2>Current: <current-price v-bind:ingredients="ingredients"
+                                      v-bind:count="count"></current-price></h2>
           <selected-pizza v-bind:ingredients="ingredients"
                           v-bind:compounds="compounds"></selected-pizza>
-          <selected-options v-bind:options="meta"></selected-options>
-          <done-button></done-button>
+          <selected-options v-bind:options="meta"
+                            v-bind:count="count"
+                            v-on:add-count-of-selection="addCoundOfSelection"
+                            v-on:sub-count-of-selection="subCountOfSelection"></selected-options>
+          <done-button v-on:done-current="newItem"></done-button>
           <clear-button></clear-button>
           <hr />
-          <h2>Total Order:</h2>
+          <h2>Total Order: <accumulated-total v-bind:accumulation="accumulation"></accumulated-total></h2>
+          <pizza-basket v-bind:accumulation="accumulation"
+                        v-on:remove-item="removeItemFromAccumulation"></pizza-basket>
         </div>
       </div>
     </div>
