Break out duplicate functionality into mixins, refactor some minor behavs.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="col-md-4">
           <h2>Current: <current-price v-bind:ingredients="ingredients"
                                       v-bind:count="count"></current-price></h2>
-          <selected-pizza v-bind:ingredients="ingredients"
+          <selected-pizza v-bind:components="ingredients"
                           v-bind:compounds="compounds"></selected-pizza>
           <selected-options v-bind:options="meta"
                             v-bind:count="count"
