Add clearSelection behavior.
- Selection now clears when clicking clear.
- Selection now clears when adding selection to accumulation.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             v-on:add-count-of-selection="addCoundOfSelection"
                             v-on:sub-count-of-selection="subCountOfSelection"></selected-options>
           <done-button v-on:done-current="newItem"></done-button>
-          <clear-button></clear-button>
+          <clear-button v-on:clear-selection="clearSelection"></clear-button>
           <hr />
           <h2>Total Order: <accumulated-total v-bind:accumulation="accumulation"></accumulated-total></h2>
           <pizza-basket v-bind:accumulation="accumulation"
