Add Gulp task runner, write short readme.
closes #3
closes #4

--- a/index.html
+++ b/index.html
@@ -59,8 +59,6 @@
     </div>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.1.10/vue.js"></script>
-    <script type="text/javascript" src="scripts/filters.js"></script>
-    <script type="text/javascript" src="scripts/components.js"></script>
-    <script type="text/javascript" src="scripts/app.js"></script>
+    <script type="text/javascript" src="dist/bundle.min.js"></script>
   </body>
 </html>
